@@ -21,7 +21,9 @@ configure: configure-stamp
 configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
-	$(MAKE) -f Makefile.cvs || true
+	if [ -e Makefile.cvs ] ; then \
+	    $(MAKE) -f Makefile.cvs; \
+	fi
 	chmod a+x configure
 	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info
 	touch configure-stamp
@@ -48,7 +50,9 @@ clean:
 	dh_testroot
 	rm -f build-stamp configure-stamp
 
-	-$(MAKE) -f Makefile.cvs || true
+	if [ -e Makefile.cvs ] ; then \
+	    $(MAKE) -f Makefile.cvs; \
+	fi;
 	# Add here commands to clean up after the build process.
 	chmod a+x configure
 	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info
